--- a/index.html
+++ b/index.html
@@ -73,8 +73,11 @@
 								<h2><u>My Achievements</u></h2>
 								<ul>
 									<li>Secured 1st place in CSI national level coding contest conducted in HackerRank()</li>
+									<a href="https://drive.google.com/file/d/1dqOyhjRsUnIFBs0x_jfFnlenTD4kroEl/view?usp=sharing" class="button small">View My Certificate</a></li></br>
+									<li>Scored 1st place in National Level Mathematics Aptitude Test by KITSW(Department of Mathematics and Humanities)</li>
+									<a href="https://drive.google.com/file/d/12qIbW8MKR46tuddSd2JuW51sxoDc9HNK/view?usp=sharing" class="button small">View My Certificate</a></li></br>
 								</ul>
-								<a href="https://drive.google.com/file/d/1dqOyhjRsUnIFBs0x_jfFnlenTD4kroEl/view?usp=sharing" class="button small">View My Certificate</a></li></br>
+				
 						
 							<br/><h2><u>My Certifications</u></h2>
 								<div class="table-wrapper">
