--- a/index.html
+++ b/index.html
@@ -84,7 +84,18 @@
 												<th><h3>Issued Organization</h3></th>
 											</tr>
 										</thead>
-										<tbody>
+										<tbody><tr>
+												<td>Problem Solving(Skill Test)</td>
+												<td>HackerRank</td>
+											</tr>
+											<tr>
+												<td>Python Programming(Skill test)</td>
+												<td>HackerRank</td>
+											</tr>
+											<tr>
+												<td>Python Specialization(With Honors)</td>
+												<td>Coursera</td>
+											</tr>
 											<tr>
 												<td>CLA: Programming Essentials in C</td>
 												<td>Cisco</td>
@@ -109,10 +120,6 @@
 												<td>CCNA: Switching, Routing, and Wireless Essentials</td>
 												<td>Cisco</td>
 												
-											</tr>
-											<tr>
-												<td>Python Specialization(With Honors)</td>
-												<td>Coursera</td>
 											</tr>
 											<tr>
 												<td>Predict Future Product Prices Using Facebook
