--- a/index.html
+++ b/index.html
@@ -16,24 +16,25 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>This is<br />
+						<h1>This is<br/>
 						Villuri Gnanesh</h1>
-						<p>Looking to start the career as an entry-level software engineer with a reputed firm driven by technology
-							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-						</ul>
+						<p>Graduate Student at Stony Brook University willing to work as a software engineer with a reputed firm driven by technology
+							<li style="list-style: none;"><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 					</div>
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Gnanesh</a>
+						<a href="index.html" class="logo">ABOUT</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">About Me</a></li>
-							<li><a href="generic.html">My Projects</a></li>
-							<li><a href="elements.html">Work Experience</a></li>
+							<li><a href="projects.html">My Projects</a></li>
+							<li><a href="workexp.html">Work Experience</a></li>
+							<li><a href="publications.html">Publications</a></li>
+							<li><a href="contact.html">Contact Me</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/villuri-gnanesh-96b680160/" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
@@ -47,27 +48,24 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><u>About Me</u></h2>
-									<p>I'm an Information Technology Student, with good problem-solving abilities and agility to adapt in any situation.I am also good at data structures and algorithms, Networking, and a few familiar Web Technologies. I am waiting for a hands-on experience with a company that embraces creativity and innovation. I am currently doing my B.Tech in JNTUK-University College of Engineering Vizianagaram.</p>
+									<p>I worked as a UI/UX Designer <a href="https://www.abdadigital.com/">@ABDA Digital</a>. I am currently pursuing my graduation at Stony Brook University (State University of New York) in Computer Engineering. I am good at Web Technologies, Data Structures and Algorithms, Machine Learning and Networking. I also have good problem-solving abilities and agility to adapt in any situation. I was looking for an Organization that embraces creativity and innovation in me.</p>
 								</header>
-								<p><span class="image right"><img src="images/Mypic.jpg" alt="" /></span><h3>Here's a few technologies I've been working with recently:</h3></p>
-								<div class="row">
-								<div class="col-6 col-12-small">
-											<ul>
-												<li>Facebook Prophet</li>
-												<li>Blockchain</li>
-												<li>SQLite</li>
-												<li>Kotlin</li>
-											</ul>
-										</div>
+								<p><h3>Here's a few technologies I've been working with recently:</h3></p>
+								<ul style="list-style: none;">
+									<li>Python</li>
+									<li>HTML</li>
+									<li>CSS</li>
+									<li>Javascript</li>
+									<li>JQuery</li>
+									<li>Bootstrap</li>
+								</ul>
 									
-									</div>
 								<ul class="actions special">
-									<li><a href="https://docs.google.com/document/d/1F_D_cLyV0mCuXymxiYKXYPQwoUIpLe5SCQ8HtH4iaCs/edit?usp=sharing" class="button primary large">Check My Resume</a></li>
+									<li><a href="https://drive.google.com/file/d/12BpuklJCh_2TL_8oBwocThR7vGmBrnV7/view?usp=sharing" class="button primary large">Check My Resume</a></li>
 								</ul>
 							</br>
 								<h2><u>My Achievements</u></h2>
-								<ul>
+								<ul style="list-style: none;">
 									<li>Secured 1st place in CSI national level coding contest conducted in HackerRank()</li>
 									<a href="https://drive.google.com/file/d/1dqOyhjRsUnIFBs0x_jfFnlenTD4kroEl/view?usp=sharing" class="button small">View My Certificate</a></li></br>
 									<li>Scored 1st place in National Level Mathematics Aptitude Test by KITSW(Department of Mathematics and Humanities)</li>
@@ -148,53 +146,6 @@
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<section>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-						</section>
-						<section class="split contact">
-							<section class="alt">
-								<h3>Address</h3>
-								<p>8-272/30, VudaColony<br />
-								Gopalapatnam, Visakhaptnam 530027</p>
-							</section>
-							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(+91)8639224857</a></p>
-							</section>
-							<section>
-								<h3>Email</h3>
-								<p><a href="#">villurignanesh@gmail.com</a></p>
-							</section>
-							<section>
-								<h3>Social</h3>
-								<ul class="icons alt">
-									<li><a href="https://twitter.com/GnaneshVilluri" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="https://www.facebook.com/villuri.gnanesh" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="https://www.instagram.com/villurignanesh/?hl=en" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="https://github.com/villurignanesh" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
-							</section>
-						</section>
-					</footer>
 					<div id="copyright">
 						<ul><li>&copy; Designed By VilluriGnanesh</li></ul>
 					</div>
