--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" light-mode="Dark">
+<html lang="en" light-mode="dark">
 
 <head>
     <title>Gnanesh Villuri | Home</title>
