--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </div>
                 <br/>
                 <span style="display: inline;">I am into <span class="animated-text"
-                    data-words="UI/UX Designing, Machine Learning, Web Development"></span>
+                    data-words="Artificial Intelligence, Machine Learning, Full Stack Development"></span>
                 </span>
                 <div>
                     <div class="social-icons">
