--- a/education.html
+++ b/education.html
@@ -293,11 +293,8 @@
         <div class="date date1">2024-2027</div>
         <div>
             <h2 class="timelineHeading">Stony Brook University</h2>
-            <h6>PhD, Computer Engineering</h6>
-            <!-- <li>Top 1% in the department</li>
-            <li>Best Undergraduate Researcher</li>
-            <li>Betsy Schumacker Woman</li>
-            <li>Athlete of the Year Award</li> -->
+            <h6>Doctor of Philosophy (PhD), Computer Engineering</h6>
+            <li>Working on Interpretability and Explainability of ML Models</li>
         </div>
       </div>
    </div> 
